--- a/kosakata.html
+++ b/kosakata.html
@@ -309,97 +309,97 @@
 
   <script>
     const data = [
-      ["neko", "kucing"],["inu", "anjing"],["hon", "buku"],["kuruma", "mobil"],
-      ["mizu", "air"],["sora", "langit"],["yama", "gunung"],["kawa", "sungai"],
-      ["ki", "pohon"],["hana", "bunga"],["arigatou gozaimasu", "terimakasih"],
-      ["konnichiwa", "halo"],["ohayougozaimasu", "selamat pagi"],["konbanwa", "selamat malam"],
-      ["oyasuminasai", "selamat istirahat"],["sayounara", "sampai jumpa"],["getsuyoubi", "senin"],
-      ["kayoubi", "selasa"],["suiyoubi", "rabu"],["mokuyoubi", "kamis"],["kinyoubi", "jumat"],
-      ["doyoubi", "sabtu"],["nichiyoubi", "minggu"],["kyoo", "hari ini"],["kinoo", "kemarin"],
-      ["asatte", "lusa"],["otootoi", "kemarin dulu"],["asa", "pagi"],["kesa", "tadi pagi"],
-      ["ban/yoru", "malam"],["yuube", "tadi malam"],["konban", "malam ini"],["ashita", "besok"],
-      ["mainichi", "setiap hari"],["maiasa", "setiap pagi"],["maiban", "setiap malam"],
-      ["konshuu", "minggu ini"],["senshuu", "minggu lalu"],["raishuu", "minggu depan"],
-      ["shikisai", "warna"],["pinku", "pink"],["kiiro", "kuning"],["kiniro/konjiki", "emas"],
-      ["giniro", "perak"],["kuroi", "hitam"],["ichigatsu", "januari"],["nigatsu", "februari"],
-      ["sangatsu", "maret"],["shigatsu", "april"],["gogatsu", "mei"],["rokugatsu", "juni"],
-      ["sichigatsu", "juli"],["hachigatsu", "agustus"],["kugatsu", "september"],["juugatsu", "oktober"],
-      ["juuichigatsu", "november"],["juunigatsu", "desember"],["murasaki", "unggu"],["aoi", "biru"],
-      ["mizuiro", "biru muda"],["akai", "merah"],["chairo", "coklat"],["shiroi", "putih"],
-      ["midori", "hijau"],["orenjiro", "orange"],["daidaiiro", "jingga"],["makka", "merah tua"],
-      ["masshiro", "putih jernih"],["makkuro", "hitam legam"],["massao", "biru tua"],["haiiro", "abu-abu"],
-      ["kon", "biru laut"],["kurenai", "merah terang"],["rei", "nol"],["ichi", "satu"],["ni", "dua"],
-      ["san", "tiga"],["yon", "empat"],["go", "lima"],["roku", "enam"],["nana", "tujuh"],["hachi", "delapan"],
-      ["kyuu", "sembilan"],["juu", "sepuluh"],["juuichi", "sebelas"],["juuni", "dua belas"],["juusan", "tiga belas"],
-      ["juuyon", "empat belas"],["juugo", "lima belas"],["juuroku", "enam belas"],["juunana", "tujuh belas"],
-      ["juuhachi", "delapan belas"],["juukyuu", "sembilan belas"],["nijuu", "dua puluh"],["nijuuichi", "dua puluh satu"],
-      ["nijuuni", "dua puluh dua"],["nijuusan", "dua puluh tiga"],["hyaku", "seratus"],["nihyaku", "dua ratus"],
-      ["sanbyaku", "tiga ratus"],["yohyaku", "empat ratus"],["gohyaku", "lima ratus"],["roppyaku", "enam ratus"],
-      ["nanahyaku", "tujuh ratus"],["happyaku", "delapan ratus"],["kyuuhyaku", "sembilan ratus"],["sen", "seribu"],
-      ["nisen", "dua ribu"],["sanzen", "tiga ribu"],["yonsen", "empat ribu"],["gosen", "lima ribu"],
-      ["rokusen", "enam ribu"],["nanasen", "tujuh ribu"],["hassen", "delapan ribu"],["kyuusen", "sembilan ribu"],
-      ["man", "sepuluh ribu"],["niman", "dua puluh ribu"],["sanman", "tiga puluh ribu"],["yonman", "empat puluh ribu"],
-      ["goman", "lima puluh ribu"],["rokuman", "enam puluh ribu"],["nanaman", "tujuh puluh ribu"],
-      ["hachiman", "delapan puluh ribu"],["juuman", "seratus ribu"],["hyakuman", "sejuta"],["senman", "sepuluh juta"],
-      ["oku", "seratus juta"],["chou", "satu triliun"],["jintai", "tubuh manusia"],["kata", "bahu"],["nodo", "tenggorokan"],
-      ["kao", "muka"],["hoho", "pipi"],["ha", "gigi"],["yubi", "jari"],["onaka", "perut"],["tsume", "kuku"],
-      ["hitai", "dahi"],["ago", "dagu"],["hana", "hidung"],["kuchi", "mulut"],["kuchibiru", "bibir"],["kubi", "leher"],
-      ["tenohira", "telapak tangan"],["karada", "tubuh/badan"],["atama", "kepala"],["te", "tangan"],["ashi", "kaki"],
-      ["ude", "lengan"],["hiza", "lutut"],["kami", "rambut"],["senaka", "punggung"],["koshi", "pinggang"],["me", "mata"],
-      ["mimi", "telinga"],["kakato", "tumit"],["ashiyubi", "jari kaki"],["oyayubi", "jempol"],["hitosashiyubi", "jari telunjuk"],
-      ["nakayubi", "jari tengah"],["kusuruyubi", "jari manis"],["koyubi", "jari kelingking"],["agohige", "janggut"],
-      ["hige", "kumis"],["futomomo", "paha"],["watashi", "saya"],["watakushi", "saya"],["boku", "saya"],["atashi", "saya"],
-      ["ore", "saya"],["watashitachi", "kami"],["bokutachi", "kami"],["bokura", "kami"],["atashitachi", "kami"],
-      ["oretachi", "kami"],["anata", "kamu"],["kimi", "kamu"],["omaera", "kamu"],["kare", "dia(laki)"],["karera", "mereka(laki)"],
-      ["kanojo", "dia(perempuan)"],["kanojora", "mereka(perempuan)"],["kore", "ini"],["korera", "ini(jamak)"],["sore", "itu"],
-      ["are", "itu"],["sorera", "itu(jamak)"],["arera", "itu(jamak)"],["hifu", "kulit"],["ketsueki", "darah"],["mayu", "alis"],
-      ["mune", "dada"],["hiji", "siku"],["heso", "pusar"],["wakinoshita", "ketiak"],["ashikubi", "pergelangan kaki"],
-      ["tekubi", "pergelangan tangan"],["gankyuu", "bola mata"],["naizou", "tubuh bagian dalam"],["jinzou", "ginjal"],
-      ["kanzou", "hati"],["rokkotsu", "tulang rusuk"],["taiji", "janin"],["shinzou", "jantung"],["hizou", "limpa"],
-      ["nou", "otak"],["kinniku", "otot"],["hai", "paru-paru"],["kekkan", "pembulu darah"],["doumyaku", "nadi"],
-      ["joumyaku", "urat"],["shikyuu", "rahim"],["seishi", "sperma"],["heso no o", "tali pusar"],["zugaikotsu", "tengkorak"],
-      ["hone", "tulang"],["chou", "usus"],["daichou", "usus besar"],["boorupen", "pulpen"],["hon", "buku"],
-      ["bundoki", "busur derajat"],["kyoukasho", "buku pelajaran"],["hyakkajiten", "ensiklopedia"],["hasami", "gunting"],
-      ["dentaku keisanki", "kalkulator"],["chooku", "kapur"],["isu", "kursi"],["konpyu-ta", "komputer"],["jisho", "kamus"],
-      ["kami", "kertas"],["tsukue", "meja"],["kokuban", "papan tulis hitam"],["jougi", "penggaris"],
-      ["kokuban keshi", "penghapus papan hitam"],["enpitsu", "pensil"],["sha-pen", "pensil mekanik"],["chizu", "peta"],
-      ["pen", "pulpen"],["hondana", "rak buku"],["enpitsu kezuri", "rautan pensil"],["seifuku", "seragam"],
-      ["hochikisu", "staples"],["ma-ka", "spidol"],["tsuugaku kaban", "tas sekolah"],["fudebako", "tempat pensil"],
-      ["houchou", "pisau dapur"],["manaita", "talenan"],["jousuiki", "penyuling air"],["nabe", "panci"],["furaipan", "wajan"],
-      ["yakan", "ketel"],["otama", "sendok sayur"],["haisuikou", "saringan"],["bouru", "mangkuk"],["mikisaa", "blender"],
-      ["oroshigane", "parutan"],["kawa muki ki", "alat pengupas"],["sennuki", "pembuka botol"],["kankiri", "pembuka kaleng"],
-      ["koruku nuki", "kotrek"],["kudamono", "buah"],["ichigo", "strawberry"],["mikan", "jeruk mandarin"],["orenji", "jeruk"],
-      ["remon", "lemon"],["suika", "semangka"],["budou", "anggur"],["painappurru", "nanas"],["ringo", "apel"],
-      ["dorian", "durian"],["papaiya", "pepaya"],["momo", "buah persik"],["mangoo", "mangga"],["abokado", "alpukat"],
-      ["kiui", "kiwi"],["guaba", "jambu biji"],["hoshibudou", "kismis"],["zakuro", "delima"],["kokonottsu", "kelapa"],
-      ["kiichigo", "rasbery"],["nashi", "pir"],["yasai", "sayur"],["daikon", "lobak jepang"],["retasu", "selada"],
-      ["tomato", "tomat"],["jagaimo", "kentang"],["kyabetsu", "kubis"],["shouga", "jahe"],["nasu", "terong"],
-      ["buruuberii", "bluberry"],["burakkuberii", "blackberry"],["sakuranbou", "cherry"],["oribu", "buah jaitun"],
-      ["banana", "pisang"],["natsumeyashi no mi", "kurma"],["ninjin", "wortel"],["tamanegi", "bawang merah"],
-      ["ninniku", "bawang putih"],["sayaendou", "kacang panjang"],["endou mame/aomame", "kacang polong"],
-      ["karifurawaa", "kembang kol"],["kyuuri", "mentimun"],["piman", "cabe hijau"],["mame", "kacang"],
-      ["massuruumu", "jamur"],["hakusai", "sawi"],["kabocha", "labu"],["burokkorii", "brokoli"],["daizu", "kedelai"],
-      ["ingen mame", "kacang merah"],["ooki", "besar"],["chiisai", "kecil"],["nagai", "panjang"],["mijikai", "pendek"],
-      ["ooi", "banyak"],["sukunai", "sedikit"],["futoi", "gemuk,tebal"],["hosoi", "ramping,tipis"],["atsui", "tebal"],
-      ["usui", "tipis"],["katai", "keras"],["yawarakai", "lunak"],["komakai", "kecil(uang)"],["arai", "kasar"],
-      ["atarashii", "baru"],["furui", "lama,tua"],["takai", "mahal"],["yasui", "murah"],["hayai", "cepat(waktu)"],
-      ["hayai", "cepat(kelajuan)"],["osoi", "lambat"],["tooi", "jauh"],["chikai", "dekat"],["tsuyoi", "kuat"],
-      ["yowai", "lemah"],["takai", "tinggi,mahal"],["hikui", "rendah"],["atsui", "panas(mkn,minum dll)"],
-      ["atatakai", "hangat(mkn,minum dll)"],["atsui", "panas(suhu)"],["tsumetai", "dingin(mkn,minum dll)"],
-      ["nurui", "kurang panas, tdk panas tdk dingin jg"],["marui", "bundar/bulat"],["amai", "manis"],["karai", "pedas"],
-      ["suppai", "asam"],["shiokarai", "asin"],["nigai", "pahit"],["koi", "pekat"],["usui", "tipis,encer(rasa)"],
-      ["oishii", "enak"],["mazui", "tidak enak"],["samui", "dingin(suhu)"],["atatakai", "hangat(suhu)"],
-      ["suzushii", "sejuk(suhu)"],["mushiatsui", "panas gerah"],["akarui", "terang,riang"],["kurai", "gelap,suram"],
-      ["kitanai", "kotor"],["omoi", "berat"],["karui", "ringan"],["kuwashii", "detail"],["muzukashii", "sulit"],
-      ["yasashii", "mudah"],["mezurashii", "langka"],["okashii", "aneh,lucu"],["abunai", "berbahaya"],["umai", "enak,pandai"],
-      ["ii", "bagus"],["warui", "jelek"],["hidoi", "kejam"],["urusai", "berisik"],["isogashii", "sibuk"],["tadashii", "benar"],
-      ["sugoi", "hebat"],["subarashii", "luar biasa"],["kakkoi", "keren,terlihat bagus"],["erai", "pintar,hebat,bagus"],
-      ["shitashii", "akrab"],["yasashii", "baik hati,ramah"],["kawaii", "cantik,lucu,imut"],["utsukushii", "indah"],
-      ["otonashii", "bersifat lemah lembut dan tidak keras"],["tanoshii", "menyenangkan"],["omoshiroi", "menarik,lucu"],
-      ["tsumaranai", "membosankan,tidak menarik"],["ureshii", "senang,gembira"],["sabishii", "merasa sepi"],
-      ["kowai", "takut"],["kanashii", "sedih"],["hazukashii", "malu"],["urayamashii", "iri hati"],
-      ["natsukashii", "terkenang,melepas rindu"],["itai", "merasa nyeri,sakit"],["hoshii", "ingin mendapatkan"],
-      ["nai", "tidak ada"],["zannen", "menyayangkan"],["shinpai", "khawatir"]
+      ["ねこ", "kucing"],["いぬ", "anjing"],["ほん", "buku"],["くるま", "mobil"],
+["みず", "air"],["そら", "langit"],["やま", "gunung"],["かわ", "sungai"],
+["き", "pohon"],["はな", "bunga"],["ありがとう ございます", "terimakasih"],
+["こんにちは", "halo"],["おはよう ございます", "selamat pagi"],["こんばんは", "selamat malam"],
+["おやすみなさい", "selamat istirahat"],["さようなら", "sampai jumpa"],["げつようび", "senin"],
+["かようび", "selasa"],["すいようび", "rabu"],["もくようび", "kamis"],["きんようび", "jumat"],
+["どようび", "sabtu"],["にちようび", "minggu"],["きょう", "hari ini"],["きのう", "kemarin"],
+["あさって", "lusa"],["おととい", "kemarin dulu"],["あさ", "pagi"],["けさ", "tadi pagi"],
+["ばん / よる", "malam"],["ゆうべ", "tadi malam"],["こんばん", "malam ini"],["あした", "besok"],
+["まいにち", "setiap hari"],["まいあさ", "setiap pagi"],["まいばん", "setiap malam"],
+["こんしゅう", "minggu ini"],["せんしゅう", "minggu lalu"],["らいしゅう", "minggu depan"],
+["しきさい", "warna"],["ピンク", "pink"],["きいろ", "kuning"],["きんいろ / こんじき", "emas"],
+["ぎんいろ", "perak"],["くろい", "hitam"],["いちがつ", "januari"],["にがつ", "februari"],
+["さんがつ", "maret"],["しがつ", "april"],["ごがつ", "mei"],["ろくがつ", "juni"],
+["しちがつ", "juli"],["はちがつ", "agustus"],["くがつ", "september"],["じゅうがつ", "oktober"],
+["じゅういちがつ", "november"],["じゅうにがつ", "desember"],["むらさき", "unggu"],["あおい", "biru"],
+["みずいろ", "biru muda"],["あかい", "merah"],["ちゃいろ", "coklat"],["しろい", "putih"],
+["みどり", "hijau"],["オレンジいろ", "orange"],["だいだいいろ", "jingga"],["まっか", "merah tua"],
+["まっしろ", "putih jernih"],["まっくろ", "hitam legam"],["まっさお", "biru tua"],["はいいろ", "abu-abu"],
+["こん", "biru laut"],["くれない", "merah terang"],["れい / ゼロ", "nol"],["いち", "satu"],["に", "dua"],
+["さん", "tiga"],["よん / し", "empat"],["ご", "lima"],["ろく", "enam"],["なな / しち", "tujuh"],["はち", "delapan"],
+["きゅう / く", "sembilan"],["じゅう", "sepuluh"],["じゅういち", "sebelas"],["じゅうに", "dua belas"],["じゅうさん", "tiga belas"],
+["じゅうよん / じゅうし", "empat belas"],["じゅうご", "lima belas"],["じゅうろく", "enam belas"],["じゅうなな / じゅうしち", "tujuh belas"],
+["じゅうはち", "delapan belas"],["じゅうきゅう / じゅうく", "sembilan belas"],["にじゅう", "dua puluh"],["にじゅういち", "dua puluh satu"],
+["にじゅうに", "dua puluh dua"],["にじゅうさん", "dua puluh tiga"],["ひゃく", "seratus"],["にひゃく", "dua ratus"],
+["さんびゃく", "tiga ratus"],["よんひゃく", "empat ratus"],["ごひゃく", "lima ratus"],["ろっぴゃく", "enam ratus"],
+["ななひゃく", "tujuh ratus"],["はっぴゃく", "delapan ratus"],["きゅうひゃく", "sembilan ratus"],["せん", "seribu"],
+["にせん", "dua ribu"],["さんぜん", "tiga ribu"],["よんせん", "empat ribu"],["ごせん", "lima ribu"],
+["ろくせん", "enam ribu"],["ななせん", "tujuh ribu"],["はっせん", "delapan ribu"],["きゅうせん", "sembilan ribu"],
+["まん", "sepuluh ribu"],["にまん", "dua puluh ribu"],["さんまん", "tiga puluh ribu"],["よんまん", "empat puluh ribu"],
+["ごまん", "lima puluh ribu"],["ろくまん", "enam puluh ribu"],["ななまん", "tujuh puluh ribu"],
+["はちまん", "delapan puluh ribu"],["じゅうまん", "seratus ribu"],["ひゃくまん", "sejuta"],["せんまん", "sepuluh juta"],
+["おく", "seratus juta"],["ちょう", "satu triliun"],["じんたい", "tubuh manusia"],["かた", "bahu"],["のど", "tenggorokan"],
+["かお", "muka"],["ほほ", "pipi"],["は", "gigi"],["ゆび", "jari"],["おなか", "perut"],["つめ", "kuku"],
+["ひたい", "dahi"],["あご", "dagu"],["はな", "hidung"],["くち", "mulut"],["くちびる", "bibir"],["くび", "leher"],
+["てのひら", "telapak tangan"],["からだ", "tubuh/badan"],["あたま", "kepala"],["て", "tangan"],["あし", "kaki"],
+["うで", "lengan"],["ひざ", "lutut"],["かみ", "rambut"],["せなか", "punggung"],["こし", "pinggang"],["め", "mata"],
+["みみ", "telinga"],["かかと", "tumit"],["あしゆび", "jari kaki"],["おやゆび", "jempol"],["ひとさしゆび", "jari telunjuk"],
+["なかゆび", "jari tengah"],["くすりゆび", "jari manis"],["こゆび", "jari kelingking"],["あごひげ", "janggut"],
+["ひげ", "kumis"],["ふともも", "paha"],["わたし", "saya"],["わたくし", "saya"],["ぼく", "saya"],["あたし", "saya"],
+["おれ", "saya"],["わたしたち", "kami"],["ぼくたち", "kami"],["ぼくら", "kami"],["あたしたち", "kami"],
+["おれたち", "kami"],["あなた", "kamu"],["きみ", "kamu"],["おまえら", "kamu"],["かれ", "dia(laki)"],["かれら", "mereka(laki)"],
+["かのじょ", "dia(perempuan)"],["かのじょら", "mereka(perempuan)"],["これ", "ini"],["これら", "ini(jamak)"],["それ", "itu"],
+["あれ", "itu"],["それら", "itu(jamak)"],["あれら", "itu(jamak)"],["ひふ", "kulit"],["けつえき", "darah"],["まゆ", "alis"],
+["むね", "dada"],["ひじ", "siku"],["へそ", "pusar"],["わきのした", "ketiak"],["あしくび", "pergelangan kaki"],
+["てくび", "pergelangan tangan"],["がんきゅう", "bola mata"],["ないぞう", "tubuh bagian dalam"],["じんぞう", "ginjal"],
+["かんぞう", "hati"],["ろっこつ", "tulang rusuk"],["たいじ", "janin"],["しんぞう", "jantung"],["ひぞう", "limpa"],
+["のう", "otak"],["きんにく", "otot"],["はい", "paru-paru"],["けっかん", "pembulu darah"],["どうみゃく", "nadi"],
+["じょうみゃく", "urat"],["しきゅう", "rahim"],["せいし", "sperma"],["へそのお", "tali pusar"],["ずがいこつ", "tengkorak"],
+["ほね", "tulang"],["ちょう", "usus"],["だいちょう", "usus besar"],["ボールペン", "pulpen"],["ほん", "buku"],
+["ぶんどき", "busur derajat"],["きょうかしょ", "buku pelajaran"],["ひゃっかじてん", "ensiklopedia"],["はさみ", "gunting"],
+["でんたく けいさんき", "kalkulator"],["チョーク", "kapur"],["いす", "kursi"],["コンピューター", "komputer"],["じしょ", "kamus"],
+["かみ", "kertas"],["つくえ", "meja"],["こくばん", "papan tulis hitam"],["じょうぎ", "penggaris"],
+["こくばん けし", "penghapus papan hitam"],["えんぴつ", "pensil"],["シャーペン", "pensil mekanik"],["ちず", "peta"],
+["ペン", "pulpen"],["ほんだな", "rak buku"],["えんぴつ けずり", "rautan pensil"],["せいふく", "seragam"],
+["ホチキス", "staples"],["マーカー", "spidol"],["つうがく かばん", "tas sekolah"],["ふでばこ", "tempat pensil"],
+["ほうちょう", "pisau dapur"],["まないた", "talenan"],["じょうすいき", "penyuling air"],["なべ", "panci"],["フライパン", "wajan"],
+["やかん", "ketel"],["おたま", "sendok sayur"],["はいすいこう", "saringan"],["ボウル", "mangkuk"],["ミキサー", "blender"],
+["おろしがね", "parutan"],["かわむきき", "alat pengupas"],["せんぬき", "pembuka botol"],["かんきり", "pembuka kaleng"],
+["コルクぬき", "kotrek"],["くだもの", "buah"],["いちご", "strawberry"],["みかん", "jeruk mandarin"],["オレンジ", "jeruk"],
+["レモン", "lemon"],["すいか", "semangka"],["ぶどう", "anggur"],["パイナップル", "nanas"],["りんご", "apel"],
+["ドリアン", "durian"],["パパイヤ", "pepaya"],["もも", "buah persik"],["マンゴー", "mangga"],["アボカド", "alpukat"],
+["キウイ", "kiwi"],["グアバ", "jambu biji"],["ほしぶどう", "kismis"],["ざくろ", "delima"],["ココナッツ", "kelapa"],
+["きいちご", "rasbery"],["なし", "pir"],["やさい", "sayur"],["だいこん", "lobak jepang"],["レタス", "selada"],
+["トマト", "tomat"],["じゃがいも", "kentang"],["キャベツ", "kubis"],["しょうが", "jahe"],["なす", "terong"],
+["ブルーベリー", "bluberry"],["ブラックベリー", "blackberry"],["さくらんぼう", "cherry"],["オリーブ", "buah jaitun"],
+["バナナ", "pisang"],["ナツメヤシ の み", "kurma"],["にんじん", "wortel"],["たまねぎ", "bawang merah"],
+["にんにく", "bawang putih"],["さやえんどう", "kacang panjang"],["えんどう まめ / あおまめ", "kacang polong"],
+["カリフラワー", "kembang kol"],["きゅうり", "mentimun"],["ピーマン", "cabe hijau"],["まめ", "kacang"],
+["マッシュルーム", "jamur"],["はくさい", "sawi"],["かぼちゃ", "labu"],["ブロッコリー", "brokoli"],["だいず", "kedelai"],
+["いんげん まめ", "kacang merah"],["おおきい", "besar"],["ちいさい", "kecil"],["ながい", "panjang"],["みじかい", "pendek"],
+["おおい", "banyak"],["すくない", "sedikit"],["ふとい", "gemuk,tebal"],["ほそい", "ramping,tipis"],["あつい", "tebal"],
+["うすい", "tipis"],["かたい", "keras"],["やわらかい", "lunak"],["こまかい", "kecil(uang)"],["あらい", "kasar"],
+["あたらしい", "baru"],["ふるい", "lama,tua"],["たかい", "mahal"],["やすい", "murah"],["はやい", "cepat(waktu)"],
+["はやい", "cepat(kelajuan)"],["おそい", "lambat"],["とおい", "jauh"],["ちかい", "dekat"],["つよい", "kuat"],
+["よわい", "lemah"],["たかい", "tinggi,mahal"],["ひくい", "rendah"],["あつい", "panas(mkn,minum dll)"],
+["あたたかい", "hangat(mkn,minum dll)"],["あつい", "panas(suhu)"],["つめたい", "dingin(mkn,minum dll)"],
+["ぬるい", "kurang panas, tdk panas tdk dingin jg"],["まるい", "bundar/bulat"],["あまい", "manis"],["からい", "pedas"],
+["すっぱい", "asam"],["しおからい", "asin"],["にがい", "pahit"],["こい", "pekat"],["うすい", "tipis,encer(rasa)"],
+["おいしい", "enak"],["まずい", "tidak enak"],["さむい", "dingin(suhu)"],["あたたかい", "hangat(suhu)"],
+["すずしい", "sejuk(suhu)"],["むしあつい", "panas gerah"],["あかるい", "terang,riang"],["くらい", "gelap,suram"],
+["きたない", "kotor"],["おもい", "berat"],["かるい", "ringan"],["くわしい", "detail"],["むずかしい", "sulit"],
+["やさしい", "mudah"],["めずらしい", "langka"],["おかしい", "aneh,lucu"],["あぶない", "berbahaya"],["うまい", "enak,pandai"],
+["いい", "bagus"],["わるい", "jelek"],["ひどい", "kejam"],["うるさい", "berisik"],["いそがしい", "sibuk"],["ただしい", "benar"],
+["すごい", "hebat"],["すばらしい", "luar biasa"],["かっこいい", "keren,terlihat bagus"],["えらい", "pintar,hebat,bagus"],
+["したしい", "akrab"],["やさしい", "baik hati,ramah"],["かわいい", "cantik,lucu,imut"],["うつくしい", "indah"],
+["おとなしい", "bersifat lemah lembut dan tidak keras"],["たのしい", "menyenangkan"],["おもしろい", "menarik,lucu"],
+["つまらない", "membosankan,tidak menarik"],["うれしい", "senang,gembira"],["さびしい", "merasa sepi"],
+["こわい", "takut"],["かなしい", "sedih"],["はずかしい", "malu"],["うらやましい", "iri hati"],
+["なつかしい", "terkenang,melepas rindu"],["いたい", "merasa nyeri,sakit"],["ほしい", "ingin mendapatkan"],
+["ない", "tidak ada"],["ざんねん", "menyayangkan"],["しんぱい", "khawatir"],
     ];
 
     let questions = [], current = 0, score = 0;
