--- a/artikanji.html
+++ b/artikanji.html
@@ -53,7 +53,7 @@
 </head>
 <body>
   <div class="quiz-container">
-    <h2>Kuis Arti Kanji</h2>
+    <h2>Kuis Kanji Kunyomi</h2>
     <div id="question">...</div>
     <div id="options"></div>
     <div id="result"></div>
