--- a/artikanji.html
+++ b/artikanji.html
@@ -64,117 +64,80 @@
 
   <script>
     const data = [
-      ["日<br>nichi", "Matahari"],
-      ["月<br>getsu", "Bulan"],
-      ["木<br>ki", "Pohon"],
-      ["山<br>yama", "Gunung"],
-      ["川<br>kawa", "Sungai"],
-      ["田<br>ta", "Sawah"],
-      ["人<br>hito", "Manusia"],
-      ["口<br>kuchi", "Mulut"],
-      ["車<br>kuruma", "Kendaraan"],
-      ["門<br>mon", "Gerbang"],
-      ["火<br>hi", "Api"],
-      ["水<br>mizu", "Air"],
-      ["室<br>shitsu", "Kamar"],
-      ["家<br>ie", "Rumah"],
-      ["度<br>do", "Derajat"],
-      ["竹<br>take", "Bambu"],
-      ["貝<br>kai", "Kerang"],
-      ["花<br>hana", "Bunga"],
-      ["茶<br>cha", "Teh"],
-      ["肉<br>niku", "Daging"],
-      ["文<br>bun", "Kalimat"],
-      ["字<br>ji", "Huruf"],
-      ["物<br>mono", "Benda"],
-      ["牛<br>ushi", "Sapi"],
-      ["鳥<br>tori", "Burung"],
-      ["魚<br>sakana", "Ikan"],
-      ["明<br>aka", "Terang"],
-      ["休<br>yasumu", "Beristirahat"],
-      ["体<br>karada", "Tubuh"],
-      ["好<br>suki", "Suka"],
-      ["男<br>otoko", "Pria"],
-      ["林<br>hayashi", "Hutan"],
-      ["森<br>mori", "Hutan"],
-      ["朝<br>asa", "Pagi"],
-      ["昼<br>hiru", "Siang"],
-      ["夜<br>yoru", "Malam"],
-      ["晩<br>ban", "Malam"],
-      ["夕<br>yuu", "Malam"],
-      ["方<br>kata", "Arah"],
-      ["午<br>go", "Tengah Hari"],
-      ["前<br>mae", "Di Hadapan"],
-      ["後<br>ato", "Setelah"],
-      ["毎<br>mai", "Setiap"],
-      ["週<br>shuu", "Minggu"],
-      ["曜<br>you", "Hari Kerja"],
-      ["今<br>ima", "Sekarang"],
-      ["年<br>toshi", "Tahun"],
-      ["間<br>aida", "Ruang"],
-      ["一<br>ichi", "Satu"],
-      ["二<br>ni", "Dua"],
-      ["三<br>san", "Tiga"],
-      ["四<br>yon", "Empat"],
-      ["五<br>go", "Lima"],
-      ["六<br>roku", "Enam"],
-      ["七<br>nana", "Tujuh"],
-      ["八<br>hachi", "Delapan"],
-      ["九<br>kyuu", "Sembilan"],
-      ["十<br>juu", "Sepuluh"],
-      ["千<br>sen", "Ribu"],
-      ["万<br>man", "Sepuluh Ribu"],
-      ["百<br>hyaku", "Ratus"],
-      ["円<br>en", "Lingkaran"],
-      ["新<br>atarashii", "Baru"],
-      ["古<br>furui", "Tua"],
-      ["長<br>nagai", "Panjang"],
-      ["短<br>mijikai", "Pendek"],
-      ["高<br>takai", "Tinggi"],
-      ["安<br>yasui", "Aman"],
-      ["低<br>hikui", "Rendah"],
-      ["暗<br>kurai", "Gelap"],
-      ["多<br>ooi", "Banyak"],
-      ["少<br>sukunai", "Sedikit"],
-      ["金<br>kane", "Emas"],
-      ["土<br>tsuchi", "Tanah"],
-      ["子<br>ko", "Anak"],
-      ["女<br>onna", "Wanita"],
-      ["学<br>gaku", "Belajar"],
-      ["生<br>sei", "Hidup"],
-      ["先<br>saki", "Sebelumnya"],
-      ["私<br>watashi", "Pribadi"],
-      ["上<br>ue", "Di atas, Ke atas"],
-      ["下<br>shita", "Bawah"],
-      ["中<br>naka", "Tengah"],
-      ["大<br>ookii", "Besar"],
-      ["英<br>ei", "Hebat"],
-      ["会<br>kai", "Rapat"],
-      ["首<br>kubi", "Leher"],
-      ["行<br>iku", "Pergi"],
-      ["来<br>kuru", "Datang"],
-      ["帰<br>kaeru", "Kembali"],
-      ["食<br>taberu", "Makan"],
-      ["飲<br>nomu", "Minum"],
-      ["見<br>miru", "Lihat"],
-      ["聞<br>kiku", "Mendengar"],
-      ["読<br>yomu", "Membaca"],
-      ["書<br>kaku", "Menulis"],
-      ["話<br>hanasu", "Cerita"],
-      ["買<br>kau", "Membeli"],
-      ["教<br>oshieru", "Mendidik"],
-      ["小<br>chiisai", "Kecil"],
-      ["本<br>hon", "Buku"],
-      ["半<br>han", "Setengah"],
-      ["分<br>bun", "Bagian"],
-      ["力<br>chikara", "Kekuasaan"],
-      ["何<br>nani", "Apa"],
-      ["目<br>me", "Mata"],
-      ["耳<br>mimi", "Telinga"],
-      ["手<br>te", "Tangan"],
-      ["足<br>ashi", "Kaki"],
-      ["雨<br>ame", "Hujan"],
-      ["米<br>kome", "Beras"],
+      ["行きます", "いきます"],
+            ["来ます", "きます"],
+            ["帰ります", "かえります"],
+            ["食べます", "たべます"],
+            ["飲みます", "のみます"],
+            ["見ます", "みます"],
+            ["聞きます", "ききます"],
+            ["読みます", "よみます"],
+            ["書きます", "かきます"],
+            ["買います", "かいます"],
+            ["会います", "あいます"],
+            ["思います", "おもいます"],
+            ["言います", "いいます"],
+            ["立ちます", "たちます"],
+            ["座ります", "すわります"],
+            ["入ります", "はいります"],
+            ["出ます", "でます"],
+            ["開けます", "あけます"],
+            ["閉めます", "しめます"],
+            ["待ちます", "まちます"],
+            ["作ります", "つくります"],
+            ["住みます", "すみます"],
+            ["知ります", "しります"],
+            ["思い出します", "おもいだします"],
+            ["置きます", "おきます"],
+            ["切ります", "きります"],
+            ["送ります", "おくります"],
+            ["借ります", "かります"],
+            ["教えます", "おしえます"],
+            ["習います", "ならいます"],
+            ["分かります", "わかります"],
+            ["あります", "あります"],
+            ["います", "います"],
+            ["覚えます", "おぼえます"],
+            ["忘れます", "わすれます"],
+            ["払います", "はらいます"],
+            ["洗います", "あらいます"],
+            ["泳ぎます", "およぎます"],
+            ["遊びます", "あそびます"],
+            ["働きます", "はたらきます"],
+            ["休みます", "やすみます"],
+            ["寝ます", "ねます"],
+            ["起きます", "おきます"],
+            ["広い", "ひろい"],
+            ["狭い", "せまい"],
+            ["明るい", "あかるい"],
+            ["暗い", "くらい"],
+            ["新しい", "あたらしい"],
+            ["古い", "ふるい"],
+            ["大きい", "おおきい"],
+            ["小さい", "ちいさい"],
+            ["高い", "たかい"],
+            ["安い", "やすい"],
+            ["白い", "しろい"],
+            ["黒い", "くろい"],
+            ["赤い", "あかい"],
+            ["青い", "あおい"],
+            ["暑い", "あつい"],
+            ["寒い", "さむい"],
+            ["冷たい", "つめたい"],
+            ["難しい", "むずかしい"],
+            ["易しい", "やさしい"],
+            ["忙しい", "いそがしい"],
+            ["楽しい", "たのしい"],
+            ["強い", "つよい"],
+            ["弱い", "よわい"],
+            ["欲しい", "ほしい"],
+            ["痛い", "いたい"],
+            ["長い", "ながい"],
+            ["短い", "みじかい"],
+            ["若い", "わかい"],
+            ["行う", "おこなう"],
+            ["思う", "おもう"],
+            ["話す", "はなす"],
     ];
 
     let questions = [];
