--- a/menuhuruf.html
+++ b/menuhuruf.html
@@ -230,7 +230,7 @@
       
       <div class="menu-item" onclick="location.href='artikanji.html'">
         <div class="menu-icon">📒</div>
-        <div class="menu-title">Kuis Arti Kanji</div>
+        <div class="menu-title">Kuis Kanji 1</div>
         <div class="menu-description">Pelajari dan uji pemahaman tentang karakter Kanji dasar</div>
         <a href="artikanji.html" class="btn">Mulai Kuis</a>
       </div>
