--- a/menuhuruf.html
+++ b/menuhuruf.html
@@ -234,6 +234,13 @@
         <div class="menu-description">Pelajari dan uji pemahaman tentang karakter Kanji dasar</div>
         <a href="artikanji.html" class="btn">Mulai Kuis</a>
       </div>
+
+      <div class="menu-item" onclick="location.href='artikanji.html'">
+        <div class="menu-icon">📔</div>
+        <div class="menu-title">Kuis Kanji 2</div>
+        <div class="menu-description">Pelajari dan uji pemahaman tentang variasi Kanji dasar</div>
+        <a href="artikanji.html" class="btn">Mulai Kuis</a>
+      </div>
     </div>
 
     <a href="index.html" class="back-btn">← Kembali ke Halaman Utama</a>
