--- a/menuhuruf.html
+++ b/menuhuruf.html
@@ -235,7 +235,7 @@
         <a href="artikanji.html" class="btn">Mulai Kuis</a>
       </div>
 
-      <div class="menu-item" onclick="location.href='artikanji.html'">
+      <div class="menu-item" onclick="location.href='kanjikunyomi.html'">
         <div class="menu-icon">📔</div>
         <div class="menu-title">Kuis Kanji 2</div>
         <div class="menu-description">Pelajari dan uji pemahaman tentang variasi Kanji dasar</div>
