--- a/kanjikunyomi.html
+++ b/kanjikunyomi.html
@@ -61,38 +61,87 @@
   </div>
   <script>
     const data = [
-      ["日", "nichi"],
-["月", "gatsu"],
-["木", "moku"],
-["山", "yama"],
-["川", "kawa"],
-["田", "ta"],
-["人", "jin"],
-["口", "kuchi"],
-["車", "sha"],
-["門", "mon"],
-["火", "ka"],
-["水", "sui"],
-      ["室", "shitsu"],
-["家", "ka"],
-["度", "do"],
-["竹", "take"],
-["貝", "kai"],
-["花", "hana"],
-["茶", "cha"],
-["肉", "niku"],
-["文", "bun"],
-["字", "ji"],
-      ["物", "mono"],
-["牛", "gyuu"],
-["鳥", "tori"],
-["魚", "sakana"],
-["明", "mei"],
-["休", "kyuu"],
-["体", "tai"],
-["好", "suki"],
-["男", "otoko"],
-["林", "hayashi"],
+      const vocabulary = [
+    ["学生", "がくせい"],
+    ["学校", "がっこう"],
+    ["先生", "せんせい"],
+    ["会社", "かいしゃ"],
+    ["社員", "しゃいん"],
+    ["銀行", "ぎんこう"],
+    ["銀行員", "ぎんこういん"],
+    ["医者", "いしゃ"],
+    ["研究者", "けんきゅうしゃ"],
+    ["大学", "だいがく"],
+    ["病院", "びょういん"],
+    ["電気", "でんき"],
+    ["日本", "にほん"],
+    ["中国", "ちゅうごく"],
+    ["英語", "えいご"],
+    ["日本語", "にほんご"],
+    ["勉強", "べんきょう"],
+    ["教室", "きょうしつ"],
+    ["食堂", "しょくどう"],
+    ["図書館", "としょかん"],
+    ["美術館", "びじゅつかん"],
+    ["午前", "ごぜん"],
+    ["午後", "ごご"],
+    ["月曜日", "げつようび"],
+    ["火曜日", "かようび"],
+    ["水曜日", "すいようび"],
+    ["木曜日", "もくようび"],
+    ["金曜日", "きんようび"],
+    ["土曜日", "どようび"],
+    ["日曜日", "にちようび"],
+    ["大変", "たいへん"],
+    ["大使館", "たいしかん"],
+    ["自動車", "じどうしゃ"],
+    ["電話", "でんわ"],
+    ["公園", "こうえん"],
+    ["動物園", "どうぶつえん"],
+    ["駅員", "えきいん"],
+    ["看護師", "かんごし"],
+    ["弁護士", "べんごし"],
+    ["教師", "きょうし"],
+    ["政治", "せいじ"],
+    ["首相", "しゅしょう"],
+    ["大統領", "だいとうりょう"],
+    ["経済", "けいざい"],
+    ["電車", "でんしゃ"],
+    ["新幹線", "しんかんせん"],
+    ["郵便局", "ゆうびんきょく"],
+    ["時計", "とけい"],
+    ["住所", "じゅうしょ"],
+    ["問題", "もんだい"],
+    ["答え", "こたえ"],
+    ["会社員", "かいしゃいん"],
+    ["大学院", "だいがくいん"],
+    ["専門学校", "せんもんがっこう"],
+    ["中学校", "ちゅうがっこう"],
+    ["小学校", "しょうがっこう"],
+    ["高等学校", "こうとうがっこう"],
+    ["警察署", "けいさつしょ"],
+    ["消防署", "しょうぼうしょ"],
+    ["改札口", "かいさつぐち"],
+    ["時刻表", "じこくひょう"],
+    ["定期券", "ていきけん"],
+    ["回数券", "かいすうけん"],
+    ["保険証", "ほけんしょう"],
+    ["健康", "けんこう"],
+    ["結婚", "けっこん"],
+    ["離婚", "りこん"],
+    ["再婚", "さいこん"],
+    ["転勤", "てんきん"],
+    ["準備", "じゅんび"],
+    ["説明", "せつめい"],
+    ["案内", "あんない"],
+    ["予約", "よやく"],
+    ["運転", "うんてん"],
+    ["練習", "れんしゅう"],
+    ["試合", "しあい"],
+    ["意見", "いけん"],
+    ["新聞", "しんぶん"],
+    ["辞書", "じしょ"],
+    ["雑誌", "ざっし"],
     ];
 
     let questions = [];
