--- a/kanjikunyomi.html
+++ b/kanjikunyomi.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kuis Kun/On Kanji</title>
+  <title>Kuis Kanji 2</title>
   <style>
     body {
       font-family: sans-serif;
@@ -51,7 +51,7 @@
 </head>
 <body>
   <div class="quiz-container">
-    <h2>Kuis Kun/On Kanji</h2>
+    <h2>Kuis Kanji 2</h2>
     <div id="question">...</div>
     <div id="options"></div>
     <div id="result"></div>
