--- a/artikanji.html
+++ b/artikanji.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kuis Arti Kanji</title>
+  <title>Kuis Kanji 1</title>
   <style>
     body {
       font-family: sans-serif;
@@ -53,7 +53,7 @@
 </head>
 <body>
   <div class="quiz-container">
-    <h2>Kuis Kanji Kunyomi</h2>
+    <h2>Kuis Kanji 1</h2>
     <div id="question">...</div>
     <div id="options"></div>
     <div id="result"></div>
