--- a/artikanji.html
+++ b/artikanji.html
@@ -87,13 +87,13 @@
     }
 
     #question {
-      font-size: 3rem;
+      font-size: 2.5rem;
       margin-bottom: 0;
       font-weight: bold;
       color: #333;
       text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
-      font-family: 'MS Mincho', 'SimSun', serif;
-      min-height: 80px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      min-height: 70px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -223,10 +223,10 @@
 
     .decoration {
       position: absolute;
-      font-size: 2rem;
+      font-size: 1.5rem;
       opacity: 0.1;
       z-index: 0;
-      font-family: 'MS Mincho', 'SimSun', serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
     .dec-1 { top: 20px; left: 20px; }
@@ -265,8 +265,8 @@
       }
       
       #question {
-        font-size: 2.5rem;
-        min-height: 70px;
+        font-size: 2rem;
+        min-height: 60px;
       }
       
       #options button {
