--- a/artikanji.html
+++ b/artikanji.html
@@ -302,7 +302,7 @@
       <div class="type-indicator">Kata Kanji</div>
       <div class="question-label">Bagaimana cara membaca:</div>
       <div id="question">...</div>
-      <div class="kanji-badge">Kanji Dasar</div>
+      <div class="kanji-badge">Kanji Kunyomi</div>
     </div>
     
     <div id="options"></div>
