--- a/menuhuruf.html
+++ b/menuhuruf.html
@@ -239,7 +239,7 @@
         <div class="menu-icon">📔</div>
         <div class="menu-title">Kuis Kanji 2</div>
         <div class="menu-description">Pelajari dan uji pemahaman tentang variasi Kanji dasar</div>
-        <a href="artikanji.html" class="btn">Mulai Kuis</a>
+        <a href="kanjikunyomi.html" class="btn">Mulai Kuis</a>
       </div>
     </div>
 
