--- a/kotoba.html
+++ b/kotoba.html
@@ -468,8 +468,8 @@
       ["はん", "setengah jam"],
       ["なんじ", "jam berapa"],
       ["なんぷん", "berapa menit"],
-      ["ごぜん", "sebelum jam 12"],
-      ["ごご", "sesudah jam 12"],
+      ["ごぜん", "pm(sore,malam)"],
+      ["ごご", "am(pagi)"],
       ["あさ", "pagi"],
       ["ひる", "siang"],
       ["ばん", "malam"],
