--- a/kotoba.html
+++ b/kotoba.html
@@ -551,7 +551,22 @@
       ["ここのか", "tanggal 9"],
       ["とおか", "tanggal 10"],
       ["じゅうよっか", "tanggal 14"],
-      ["はつか", "tanggal 20"]
+      ["はつか", "tanggal 20"],
+      ["にじよっか", "tanggal 24"],
+      ["ーにち", "tanggal-"],
+      ["なんにち", "tanggal berapa"],
+      ["いつ", "kapan"],
+      ["たんじょうび", "hari ulang tahun"],
+      ["ふつう", "kereta api biasa"],
+      ["きゅうこう", "kereta api lebih cepat"],
+      ["とっきゅう", "kereta api expres"],
+      ["つぎの", "berikutnya"],
+      ["どういたしまして", "sama sama"],
+      ["ーばんせん", "jalur nomor-"],
+      ["はかた", "nama kota di kyushu"],
+      ["ふしみ", "nama kota di kyoto"],
+      ["こうしえん", "nama kota dekat osaka"],
+      ["おおさかじょう", "benteng osaka"],
     ];
 
     let questions = [];
