--- a/kotoba.html
+++ b/kotoba.html
@@ -552,7 +552,7 @@
       ["とおか", "tanggal 10"],
       ["じゅうよっか", "tanggal 14"],
       ["はつか", "tanggal 20"],
-      ["にじよっか", "tanggal 24"],
+      ["にじゅよっか", "tanggal 24"],
       ["ーにち", "tanggal-"],
       ["なんにち", "tanggal berapa"],
       ["いつ", "kapan"],
