--- a/index.html
+++ b/index.html
@@ -211,6 +211,16 @@
           <a href="menukosakata.html" class="btn">Mulai Belajar</a>
         </div>
       </div>
+
+      <div class="card">
+          <div class="card-icon">
+            <i class="fas fa-book"></i>
+          </div>
+          <h3>Tata Bahasa Jepang</h3>
+          <p>Tingkatkan pemahaman tentang tata bahasa jepang dengan pelatihan soal-soal</p>
+          <a href="test.html" class="btn">Mulai Belajar</a>
+        </div>
+      </div>
     
     <div class="footer">
       <p>© 2023 Quiz Bahasa Jepang by @husain.y.m</p>
