--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           <div class="card-icon">
             <i class="fas fa-book"></i>
           </div>
-          <h3>Tata Bahasa Jepang</h3>
+          <h3>Tata Bahasa</h3>
           <p>Tingkatkan pemahaman tentang tata bahasa jepang dengan pelatihan soal-soal</p>
           <a href="test.html" class="btn">Mulai Belajar</a>
         </div>
